--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
             display: none;
         }
         /* and (max-width: 600px) */
-        @media only screen and (orientation: portrait) {
+        /* @media only screen and (orientation: portrait) {
             #desktop {
                 display: none;
             }
             #mobile {
                 display: block;
             }
-        }
+        } */
     </style>
 </head>
 
