--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
 
 <body>
     <img id="desktop" class="stretch" src="img/about.jpg" />
-    <img id="mobile" class="stretch" src="img/mobile.jpg" />
+    <!--img id="mobile" class="stretch" src="img/mobile.jpg" /-->
 </body>
 
 </html>
