--- a/gtp.html
+++ b/gtp.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Whilli</title>
+    <title>Whilli About</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" type="text/css" href="css/reset.css" />
     <style type="text/css">
@@ -36,7 +36,7 @@
 </head>
 
 <body>
-    <img id="desktop" class="stretch" src="img/desktop.jpg" />
+    <img id="desktop" class="stretch" src="img/gtp.jpg" />
     <!--img id="mobile" class="stretch" src="img/mobile.jpg" /-->
 </body>
 
