--- a/about.html
+++ b/about.html
@@ -24,20 +24,20 @@
             display: none;
         }
         /* and (max-width: 600px) */
-        /* @media only screen and (orientation: portrait) {
+        @media only screen and (orientation: portrait) {
             #desktop {
                 display: none;
             }
             #mobile {
                 display: block;
             }
-        } */
+        }
     </style>
 </head>
 
 <body>
     <img id="desktop" class="stretch" src="img/about.jpg" />
-    <!--img id="mobile" class="stretch" src="img/mobile.jpg" /-->
+    <img id="mobile" class="stretch" src="img/about_mobile.jpg" />
 </body>
 
 </html>
