--- a/gtp.html
+++ b/gtp.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Whilli About</title>
+    <title>Whilli GTP</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" type="text/css" href="css/reset.css" />
     <style type="text/css">
@@ -24,20 +24,20 @@
             display: none;
         }
         /* and (max-width: 600px) */
-        /* @media only screen and (orientation: portrait) {
+        @media only screen and (orientation: portrait) {
             #desktop {
                 display: none;
             }
             #mobile {
                 display: block;
             }
-        } */
+        }
     </style>
 </head>
 
 <body>
     <img id="desktop" class="stretch" src="img/gtp.jpg" />
-    <!--img id="mobile" class="stretch" src="img/mobile.jpg" /-->
+    <img id="mobile" class="stretch" src="img/gtp_mobile.jpg" />
 </body>
 
 </html>
