--- a/ask.html
+++ b/ask.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Whilli Cards</title>
+    <title>Whilli Ask</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" type="text/css" href="css/reset.css" />
     <style type="text/css">
@@ -36,8 +36,8 @@
 </head>
 
 <body>
-    <img id="desktop" class="stretch" src="img/cards.jpg" />
-    <img id="mobile" class="stretch" src="img/cards_mobile.jpg" />
+    <img id="desktop" class="stretch" src="img/ask.jpg" />
+    <img id="mobile" class="stretch" src="img/ask_mobile.jpg" />
 </body>
 
 </html>
