--- a/index.html
+++ b/index.html
@@ -23,21 +23,21 @@
         #mobile {
             display: none;
         }
-        /* and (max-width: 600px) */
-        /* @media only screen and (orientation: portrait) {
+        
+        @media only screen and (orientation: portrait) {
             #desktop {
                 display: none;
             }
             #mobile {
                 display: block;
             }
-        } */
+        }
     </style>
 </head>
 
 <body>
-    <img id="desktop" class="stretch" src="img/desktop.jpg" />
-    <!--img id="mobile" class="stretch" src="img/mobile.jpg" /-->
+    <img id="desktop" class="stretch" src="img/homepage.jpg" />
+    <img id="mobile" class="stretch" src="img/homepage_mobile.jpg" />
 </body>
 
 </html>
