--- a/road_conditions.html
+++ b/road_conditions.html
@@ -23,7 +23,7 @@
         #mobile {
             display: none;
         }
-        /* and (max-width: 600px) 
+        /* and (max-width: 600px) */
         @media only screen and (orientation: portrait) {
             #desktop {
                 display: none;
@@ -31,13 +31,13 @@
             #mobile {
                 display: block;
             }
-        }*/
+        }
     </style>
 </head>
 
 <body>
     <img id="desktop" class="stretch" src="img/road_conditions.jpg" />
-    <!-- <img id="mobile" class="stretch" src="img/road_conditions_mobile.jpg" /> -->
+    <img id="mobile" class="stretch" src="img/road_conditions_mobile.jpg" />
 </body>
 
 </html>
